# bazel-mono

./: BUILD.bazel  README.md  WORKSPACE  go.mod
.github/workflows/: build.yml
simple/service/: BUILD.bazel  main.go  root_handler.go  root_handler_test.go
