load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "service_lib",
    srcs = [
        "main.go",
        "root_handler.go",
    ],
    importpath = "github.com/grahambrooks/bazel-demo/simple/service",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    embed = [":service_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/grahambrooks/bazel-mono/simple/service",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push_service",
    format = "Docker",
    image = ":go_image",
    registry = "ghcr.io",
    repository = "grahambrooks/bazel-mono",
    tag = "dev",
)

go_test(
    name = "service_test",
    srcs = ["root_handler_test.go"],
    embed = [":service_lib"],
)
